<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_air_tickets"
        android:icon="@drawable/air_tickets"
        android:title="@string/title_air_tickets" />

    <item
        android:id="@+id/main_hotels"
        android:icon="@drawable/hotels"
        android:title="@string/title_hotels"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/main_brief"
        android:icon="@drawable/brief"
        android:title="@string/title_brief"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/main_subscriptions"
        android:icon="@drawable/subscriptions"
        android:title="@string/title_subscriptions"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/main_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile"
        app:showAsAction="ifRoom"/>

</menu>