<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BottomSheetDialog"
        android:orientation="vertical"
        android:paddingHorizontal="25dp"
        android:paddingBottom="45dp">

        <LinearLayout
            style="@style/BottomSheetLabel"
            android:layout_width="38dp"
            android:layout_height="5dp"
            android:background="@drawable/circle_16dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            />

        <LinearLayout
            style="@style/OuterSearchCard"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="18dp"
            android:paddingStart="12dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="24dp">

            <TextView
                android:id="@id/source"
                style="@style/Title3"
                android:drawablePadding="7dp"
                app:drawableStartCompat="@drawable/airplane" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey5"
                android:layout_marginVertical="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/destination"
                    style="@style/TextInputWhiteIcon3"
                    android:layout_weight="1"
                    android:hint="@string/default_destination"
                    app:drawableStartCompat="@drawable/search"
                    android:drawablePadding="14dp"
                    android:background="@null"
                    android:layout_width="0dp" />

                <ImageView
                    android:id="@+id/clear_destination"
                    style="@style/WhiteIcon"
                    android:layout_gravity="center"
                    android:src="@drawable/cross"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            >
            <LinearLayout
                android:id="@+id/difficult_route"
                android:layout_height="wrap_content"
                android:layout_width="70dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginEnd="16dp"
                >
                <androidx.cardview.widget.CardView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:cardCornerRadius="8dp"
                    android:backgroundTint="@color/green"
                    android:layout_marginBottom="7dp"
                    >
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/difficult_route"
                        />
                </androidx.cardview.widget.CardView>

                <TextView
                    style="@style/Text2"
                    android:text="@string/difficult_route"
                    android:gravity="center"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/anywhere"
                android:layout_height="wrap_content"
                android:layout_width="70dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginEnd="16dp"
                >
                <androidx.cardview.widget.CardView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:cardCornerRadius="8dp"
                    android:backgroundTint="@color/blue"
                    android:layout_marginBottom="7dp"
                    >
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/anywhere"
                        />
                </androidx.cardview.widget.CardView>

                <TextView
                    style="@style/Text2"
                    android:text="@string/anywhere"
                    android:gravity="center"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/weekend"
                android:layout_height="match_parent"
                android:layout_width="70dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginEnd="16dp"
                >
                <androidx.cardview.widget.CardView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:cardCornerRadius="8dp"
                    android:backgroundTint="@color/dark_blue"
                    android:layout_marginBottom="7dp"
                    >
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/weekend"
                        />
                </androidx.cardview.widget.CardView>

                <TextView
                    style="@style/Text2"
                    android:text="@string/weekend"
                    android:gravity="center"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/hot_tickets"
                android:layout_height="wrap_content"
                android:layout_width="70dp"
                android:orientation="vertical"
                android:gravity="center"
                >
                <androidx.cardview.widget.CardView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:cardCornerRadius="8dp"
                    android:backgroundTint="@color/red"
                    android:layout_marginBottom="7dp"
                    >
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/hot_tickets"
                        />
                </androidx.cardview.widget.CardView>

                <TextView
                    style="@style/Text2"
                    android:text="@string/hot_tickets"
                    android:gravity="center"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/popular_destinations"
            style="@style/OuterSearchCard"
            android:orientation="vertical"
            android:paddingVertical="22dp"
            android:paddingHorizontal="16dp">

            <LinearLayout
                android:id="@+id/istanbul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardCornerRadius="8dp"
                    android:layout_marginEnd="8dp"
                    >
                    <ImageView
                        android:scaleType="centerCrop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/popular_destination_pic_1"
                        />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        style="@style/Title3"
                        android:text="@string/istanbul"
                        android:layout_marginBottom="-3dp"/>
                    <TextView
                        style="@style/Text"
                        android:textColor="@color/grey5"
                        android:text="@string/popular_destination"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey4"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="15dp"/>


            <LinearLayout
                android:id="@+id/sochi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardCornerRadius="8dp"
                    android:layout_marginEnd="8dp"
                    >
                    <ImageView
                        android:scaleType="centerCrop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/popular_destination_pic_2"
                        />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        style="@style/Title3"
                        android:text="@string/sochi"
                        android:layout_marginBottom="-3dp"/>
                    <TextView
                        style="@style/Text"
                        android:textColor="@color/grey5"
                        android:text="@string/popular_destination"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey4"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="15dp"/>


            <LinearLayout
                android:id="@+id/phuket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardCornerRadius="8dp"
                    android:layout_marginEnd="8dp"
                    >
                    <ImageView
                        android:scaleType="centerCrop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/popular_destination_pic_3"
                        />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        style="@style/Title3"
                        android:text="@string/phuket"
                        android:layout_marginBottom="-3dp"/>
                    <TextView
                        style="@style/Text"
                        android:textColor="@color/grey5"
                        android:text="@string/popular_destination"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey4"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/stub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginVertical="50dp"
            android:visibility="gone"
            >
            <TextView
                style="@style/Text1"
                android:text="@string/stub"/>

            <TextView
                android:id="@+id/back_from_stub"
                style="@style/ButtonText1"
                android:text="@string/back_from_stub"
                android:paddingVertical="8dp"
                android:layout_width="match_parent"
                android:gravity="center"
                android:backgroundTint="@color/blue"
                android:background="@drawable/circle_8dp"
                android:layout_marginTop="30dp"/>

        </LinearLayout>

    </LinearLayout>
</layout>
